--- a/ProyectoJuBa/src/Formularios/frmAcercaDe.form
+++ b/ProyectoJuBa/src/Formularios/frmAcercaDe.form
@@ -4,6 +4,8 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Informaci&#xf3;n"/>
+    <Property name="undecorated" type="boolean" value="true"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
