cambio en caja de texto no editable en frmseleccionempresa

--- a/ProyectoJuBa/src/Formularios/frmSeleccionarEmpresas.form
+++ b/ProyectoJuBa/src/Formularios/frmSeleccionarEmpresas.form
@@ -41,6 +41,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="tfusuario">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="200" y="50" width="190" height="30"/>
