editar Formulario Mantenimiento Usuario parte 4

--- a/ProyectoJuBa/src/Formularios/frmPrincipal.form
+++ b/ProyectoJuBa/src/Formularios/frmPrincipal.form
@@ -66,6 +66,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Usuario"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mUsuarioActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mEmpresa">
               <Properties>
