--- a/ProyectoJuBa/src/Formularios/frmMantenimientoUsuario.form
+++ b/ProyectoJuBa/src/Formularios/frmMantenimientoUsuario.form
@@ -46,8 +46,9 @@
               <Font name="Tahoma" size="12" style="1"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="16" rowCount="4">
+              <Table columnCount="15" rowCount="4">
                 <Column editable="false" title="Id" type="java.lang.Object"/>
+                <Column editable="false" title="Cuenta" type="java.lang.Object"/>
                 <Column editable="false" title="Nombres" type="java.lang.Object"/>
                 <Column editable="false" title="Apellidos" type="java.lang.Object"/>
                 <Column editable="false" title="Cedula" type="java.lang.Object"/>
@@ -59,10 +60,8 @@
                 <Column editable="false" title="Sexo" type="java.lang.Object"/>
                 <Column editable="false" title="Tipo" type="java.lang.Object"/>
                 <Column editable="false" title="Cargo" type="java.lang.Object"/>
-                <Column editable="false" title="Fecha Inicio" type="java.lang.Object"/>
                 <Column editable="false" title="Estado" type="java.lang.Object"/>
-                <Column editable="false" title="Usuario" type="java.lang.Object"/>
-                <Column editable="false" title="Password" type="java.lang.Object"/>
+                <Column editable="false" title="Fecha Inicio" type="java.lang.Object"/>
               </Table>
             </Property>
           </Properties>
@@ -213,6 +212,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Salir"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btSalirActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="750" y="420" width="120" height="40"/>
