--- a/ProyectoJuBa/src/Formularios/frmIngresoNuevaEmpresa.form
+++ b/ProyectoJuBa/src/Formularios/frmIngresoNuevaEmpresa.form
@@ -235,6 +235,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="tf_id_usuario">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+      </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="620" y="360" width="100" height="30"/>
